--- a/src/app/colonne-comp/colonne-comp.component.html
+++ b/src/app/colonne-comp/colonne-comp.component.html
@@ -2,6 +2,7 @@
 
     <div class="bloc-flex">
         <h2>{{ colonne.titre }}</h2>
+        <Button (click)="onEdit()">Edit</Button>
         <p (click)="onDeleteColonne()">X</p>
     </div>
     
