--- a/src/app/colonne-comp/colonne-comp.component.scss
+++ b/src/app/colonne-comp/colonne-comp.component.scss
@@ -34,6 +34,12 @@
                 cursor: pointer;
             }
         }
+
+        button{
+            height: 2em;
+            margin-right: 0.5em;
+            margin-top: -0.2em;
+        }
     }
 
     .add {
