--- a/src/app/tache-comp/tache-comp.component.html
+++ b/src/app/tache-comp/tache-comp.component.html
@@ -1,4 +1,4 @@
 <div class="tache">
-    <p class="description">{{ tache.description }} {{ tache.id }}</p>
+    <p class="description">{{ tache.description }}</p>
     <p class="delete" (click)="onDeleteTask()">X</p>
 </div>
