--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,8 +1,12 @@
 <h2 mat-dialog-title>Modification</h2>
 <mat-dialog-content>
-  <p>YES</p>
+  <p>Veuillez saisir une description</p>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <input matInput [(ngModel)]="data.description">
+  </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>
+  <button mat-button mat-dialog-close>Annuler</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Modifier</button>
 </mat-dialog-actions>
